--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
 
     <body>
+        <img src="https://octodex.github.com/images/vinyltocat.png">
         <h1>HII</h1>
         Some content.
     </body>
