--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 
     <body>
         <ol>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
+        
+
         <img src="https://octodex.github.com/images/vinyltocat.png">
         <h1>HII</h1>
         Some content.
